# q-gears

./: .gitignore  .gitmodules  .hgignore  .travis.yml  AUTHORS.md  CMakeLists.txt  COPYING.txt  FindOggVorbis.cmake  configure_version_file.cmake.in  q-gears.desktop  qgears.workspace  qgears.workspace.layout  readme.md  readme.txt  wix.template.in
PlugIns/Data/: CMakeLists.txt  DataPlugin.cbp
PlugIns/Data/include/: QGearsDataPlugin.h
PlugIns/Data/misc/: QGearsData.def
PlugIns/Data/src/: QGearsDataPlugin.cpp  QGearsDataPluginDll.cpp
PlugIns/Data/test/: tex_file_info.cpp  tex_file_test.cpp
QGearsMain/: CMakeLists.txt  Makefile  q-gears.cbp
QGearsMain/include/: LuaIncludes.h  Main.h  QGearsGameState.h  QGearsPrerequisites.h  qgears_version.h.in
QGearsMain/include/common/: File.h  FileSystem.h  LzsFile.h  QGearsApplication.h  QGearsManualObject.h  QGearsResource.h  QGearsStringUtil.h  TypeDefine.h  make_unique.h
QGearsMain/include/core/: Assert.h  AudioManager.h  Background2D.h  Background2DAnimation.h  CameraManager.h  CameraManagerCommands.h  ConfigCmd.h  ConfigCmdManager.h  ConfigCmdManagerCommands.h  ConfigFile.h  ConfigVar.h  ConfigVarManager.h  Console.h  DebugDraw.h  DialogsManager.h  Entity.h  EntityCollision.h  EntityDirection.h  EntityManager.h  EntityModel.h  EntityPoint.h  EntityTrigger.h  Event.h  GameFrameListner.h  InputManager.h  InputManagerCommands.h  Logger.h  Module.h  ScriptManager.h  ScriptManagerBinds.h  ScriptManagerCommands.h  TextManager.h  TextManagerCommands.h  Timer.h  UiAnimation.h  UiFont.h  UiManager.h  UiSprite.h  UiTextArea.h  UiWidget.h  (+16 more)
QGearsMain/include/data/: QGearsAFile.h  QGearsAFileManager.h  QGearsAFileSerializer.h  QGearsBackgroundFile.h  QGearsBackgroundFileManager.h  QGearsBackgroundFileSerializer.h  QGearsCameraMatrixFile.h  QGearsCameraMatrixFileManager.h  QGearsCameraMatrixFileSerializer.h  QGearsFLevelBackground2DLoader.h  QGearsFLevelFile.h  QGearsFLevelFileManager.h  QGearsFLevelFileSerializer.h  QGearsFLevelTextureLoader.h  QGearsHRCFile.h  QGearsHRCFileSerializer.h  QGearsHRCMeshLoader.h  QGearsLGPArchive.h  QGearsLGPArchiveFactory.h  QGearsLGPArchiveSerializer.h  QGearsLZSDataStream.h  QGearsLZSFLevelFile.h  QGearsLZSFLevelFileManager.h  QGearsMapListFile.h  QGearsPFile.h  QGearsPFileManager.h  QGearsPFileSerializer.h  QGearsPaletteFile.h  QGearsPaletteFileSerializer.h  QGearsRSDFile.h  QGearsSerializer.h  QGearsTexCodec.h  QGearsTexFile.h  QGearsTriggersFile.h  QGearsXMLSerializer.h
QGearsMain/include/ffvii/: FFVIICommon.h
QGearsMain/include/map/: QGearsBackground2DFile.h  QGearsBackground2DFileManager.h  QGearsBackground2DFileXMLSerializer.h  QGearsFLevelBackground2DLoader.h  QGearsFLevelTextureLoader.h  QGearsMapFile.h  QGearsMapFileManager.h  QGearsMapFileXMLSerializer.h  QGearsTile.h  QGearsWalkmeshFile.h  QGearsWalkmeshFileManager.h  QGearsWalkmeshFileXMLSerializer.h
QGearsMain/src/: Main.cpp  QGearsGameState.cpp
QGearsMain/src/common/: File.cpp  FileSystem.cpp  LzsFile.cpp  QGearsApplication.cpp  QGearsManualObject.cpp  QGearsResource.cpp  QGearsStringUtil.cpp  TypeDefine.cpp
QGearsMain/src/core/: AudioManager.cpp  Background2D.cpp  Background2D.h  Background2DAnimation.cpp  CameraManager.cpp  ConfigCmd.cpp  ConfigCmd.h  ConfigCmdManager.cpp  ConfigCmdManagerCommands.h  ConfigFile.cpp  ConfigVar.cpp  ConfigVar.h  ConfigVarManager.cpp  Console.cpp  DebugDraw.cpp  DialogsManager.cpp  Entity.cpp  EntityCollision.cpp  EntityDirection.cpp  EntityManager.cpp  EntityModel.cpp  EntityPoint.cpp  EntityTrigger.cpp  Event.h  GameFrameListner.cpp  InputManager.cpp  InputManagerCommands.h  ScriptManager.cpp  TextManager.cpp  Timer.cpp  UiAnimation.cpp  UiFont.cpp  UiFont.h  UiManager.cpp  UiSprite.cpp  UiTextArea.cpp  UiWidget.cpp  Utilites.cpp  Utilites.h  Walkmesh.cpp  (+17 more)
QGearsMain/src/data/: QGearsAFile.cpp  QGearsAFileManager.cpp  QGearsAFileSerializer.cpp  QGearsBackgroundFile.cpp  QGearsHRCFile.cpp  (+36 more)
QGearsMain/test/: test_QGearsBackground2DFileSerializer.cpp  test_QGearsCameraMatrixFileSerializer.cpp  test_QGearsFLevelFileSerializer.cpp  test_QGearsLGPArchive.cpp
SupportedGames/FinalFantasy7/: CMakeLists.txt
Tests/: CMakeLists.txt
Tests/FinalFantasy7/: CMakeLists.txt
Tests/QGearsMain/: CMakeLists.txt
dependencies/: CMakeLists.txt
dependencies/tinyxml/: tinyxmlparser.cpp
dependencies/vorbis/: sharedbook.c
utilities/: CMakeLists.txt
utilities/common/: BinGZipFile.cpp  BinGZipFile.h  DrawSkeleton.cpp  DrawSkeleton.h  File.cpp  FileSystem.h  FontFile.cpp  FontFile.h  Logger.cpp  Logger.h  LzsFile.h  OgreBase.cpp  OgreBase.h  OgreGenUtilites.cpp  OgreGenUtilites.h  Surface.cpp  Surface.h  TimToVram.cpp  TimToVram.h  Vram.cpp  Vram.h
utilities/ffix_model_exporter/: CMakeLists.txt  qgears.cbp  qgears.layout
utilities/ffix_script_dumper/: CMakeLists.txt  qgears.cbp  qgears.depend
utilities/ffix_sound_dumper/: CMakeLists.txt  qgears.cbp
utilities/ffvii_battle_model_exporter/: CMakeLists.txt  qgears.cbp  qgears.layout
utilities/ffvii_battle_scene_dumper/: CMakeLists.txt  qgears.cbp  qgears.layout
utilities/ffvii_field_dat_dumper/: CMakeLists.txt  qgears.cbp
utilities/ffvii_field_model_exporter/: CMakeLists.txt  qgears.cbp
utilities/ffvii_field_model_exporter_pc/: CMakeLists.txt  ffvii_field_model_exporter_pc.cbp
utilities/ffvii_font_exporter/: CMakeLists.txt  qgears.cbp  qgears.depend
utilities/ffvii_sound_dumper/: CMakeLists.txt  qgears.cbp  qgears.layout
utilities/ffvii_sound_dumper_psf/: CMakeLists.txt  ffvii_sound_dumper_psf_l.cbp
utilities/flevel/: CMakeLists.txt  flevel.cbp  flevel.cpp
utilities/installer/: CMakeLists.txt
utilities/lzs/: CMakeLists.txt  lzs.cbp  lzs.cpp
utilities/q-gears-launcher/: .directory  CMakeLists.txt
utilities/xeno_cd_extract/: CMakeLists.txt  extract.cpp
utilities/xeno_model_exporter/: CMakeLists.txt  qgears.cbp
utilities/xeno_script_dumper/: CMakeLists.txt  qgears.cbp
utilities/xeno_sound_dumper/: CMakeLists.txt  qgears.cbp  qgears.layout
utilities/xeno_walkmesh_exporter/: CMakeLists.txt  qgears.cbp  qgears.depend  qgears.layout
(+2834 files in other folders)
